Avoid footer overlaping over login form on narrow screen

--- a/app/assets/stylesheets/alchemy/components/login/_login.scss
+++ b/app/assets/stylesheets/alchemy/components/login/_login.scss
@@ -24,6 +24,7 @@ article {
   position: relative;
   display: table-cell;
   vertical-align: middle;
+  padding-bottom: $stickyfooter_height + 10 + px;
 
   a, a:visited {
     cursor: hand;
